syntax = "proto3";

package com.example.apiserver.grpc;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_outer_classname = "ItemServiceProto";
option java_package = "com.example.apiserver.grpc.proto.service";

service ItemProtoService {

    rpc getItem (ItemGetRequest) returns (ItemResponse);
    rpc listItem(google.protobuf.Empty) returns (ItemListResponse);

    rpc createItem (ItemCreateRequest) returns (ItemResponse);
    rpc updateItem (ItemUpdateRequest) returns (ItemResponse);
    rpc deleteItem (ItemDeleteRequest) returns (google.protobuf.Empty);

}

message ItemGetRequest {
    string id = 1;
}
message ItemCreateRequest {
    string name = 1;
    int32 price = 2;
}

message ItemUpdateRequest {
    string id = 1;
    string name = 2;
    int32 price = 3;
}

message ItemDeleteRequest {
    string id = 1;
}

message ItemResponse {
    string id = 1;
    string name = 2;
    int32 price = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp updatedAt = 5;
}

message ItemListResponse {
    repeated ItemResponse itemList = 1;
}
